sql/item.h
@@ -2135,7 +2135,6 @@ public:
 #include "item_strfunc.h"
 #include "item_geofunc.h"
 #include "item_timefunc.h"
-#include "item_uniq.h"
 #include "item_subselect.h"
 #include "item_xmlfunc.h"
 #endif
